@@ -1,3 +1,8 @@
+2015-04-28 Riccardo Mottola <rm@gnu.org>
+
+	* AppController.m
+	Pools need to be drained, not released, since they don't get retained.
+
 2015-04-23 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.h
